--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@tailwindcss/vite": "^4.0.17",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.545.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.9.4",
     "react-to-print": "^3.0.5",
     "tailwindcss": "^4.0.17",
     "tailwindcss-animated": "^2.0.0"
