--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-pdf/renderer": "^4.3.2",
     "@tailwindcss/vite": "^4.0.17",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
